# StructsPp_Plan

./: .gitignore  CMakeLists.txt
include/: FIXME  allheader(msvc).h  concept.h  file.h  list.h  string.h
src/: string.cpp
